# tradebot

./: .env.example  .gitignore  .xts_session.json  Dockerfile  Makefile  README.md  Triple-Lock Logic Flowchart.md  conftest.py  debug_out.txt  direct_simulator_poc.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  socket_debug.py
apps/api/: main.py  run.py  socket_instance.py
apps/cli/: main.py
apps/ui/: Dockerfile  dist  nginx.conf  nuxt.config.ts  package-lock.json
archive/scripts/: fix_strategy_names.py  migrate_trade_schema.py
dbschema/: strategy_rules_schema.json
docs/: cheat_sheet.md  cron.md  data_management.md  devops_guide.md  functional_design.md  live_trading.md  live_trading_guide.md  ml_training_guide.md  operational_guide.md  project_layout.md  project_layout_and_architecture.md  simplification_plan.md  simplified_strategy_rules.md  socket_workflow.md  strategy_schema_guide.md  testing_guide.md  trade_engine_bpmn.mmd  trade_engine_workflow.md  tradeflow_swimlane.md  vps_setup_guide.md  xts_openapi.json
scripts/: crossover_calculator.py  daily_trade_workflow.sh  db_init.py  debug_xts_socket.py  my_strategies.py  seed_strategy_indicators.py  seed_test_data.py
tests/backtest/: backtest_base.py  backtest_runner.py  db_mode.py  socket_mode.py  test_ema_stagnation.py  test_fund_manager_heartbeat.py  test_xts_socket.py
tests/frozen_db/: test_e2e_strategies.py  test_engine_pipeline.py  test_ml_strategy.py  test_rule_engine.py  test_signal_orchestration.py  test_strategy_integration.py
(+65 files in other folders)
